Fix large font on small devices
Give small devices a smaller font to allow the images size consistency with text.

--- a/main.css
+++ b/main.css
@@ -90,6 +90,10 @@
   margin: 0.4rem 0;
 }
 
+main {
+  font-size: 0.9rem;
+}
+
 .main-top div {
   margin: 0.5rem;
 }
@@ -119,13 +123,19 @@
   left: 0;
 }
 
+.title-icon {
+  font-size: 18px;
+}
+
 .latest-news__story {
   width: 100%;
   display: flex;
+  justify-content: space-around;
+  align-items: top;
 }
 
 .story-image__container {
-  width: 20%;
+  width: 23%;
 }
 
 .story-image__container img {
@@ -133,7 +143,8 @@
 }
 
 .story-image__text {
-  width: 80%;
+  width: 75%;
+  font-size: 0.6rem;
 }
 
 .latest-funding__header ul {
@@ -164,7 +175,7 @@
   background-size: cover;
   background-position: center;
   color: black;
-  height: 50vh;
+  height: 15vh;
   position: relative;
 }
 
@@ -181,6 +192,11 @@
   bottom: 0;
   width: 100%;
   color: white;
+}
+
+.title-active:hover {
+  color: black;
+  cursor: pointer;
 }
 
 .footer-top {
@@ -352,7 +368,7 @@
   }
 
   .main-rest {
-    width: 80%;
+    width: 90%;
     max-width: 1190px;
     margin: auto;
   }
@@ -366,9 +382,8 @@
 
   .latest-news__story {
     display: block;
-    width: 23.5%;
+    width: 23%;
     margin: 0.5rem;
-    flex-grow: 1;
   }
 
   .story-image__container {
@@ -379,6 +394,7 @@
   .story-image__text {
     display: block;
     width: 100%;
+    font-size: 0.8rem;
   }
 
   .latest-funding__header {
@@ -388,8 +404,9 @@
   }
 
   .latest-funding__header ul {
-    width: 25rem;
+    width: 24rem;
     display: flex;
+    margin-right: 2.5rem;
     flex-direction: row;
     justify-content: space-between;
   }
@@ -403,7 +420,6 @@
     height: 15rem;
     width: 23%;
     min-width: 200px;
-    flex-grow: 1;
   }
 
   .main-cards {
